--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "angular2-recaptcha": "^0.4.1",
     "babel-runtime": "^6.22.0",
     "bcrypt": "1.0.2",
-    "bootstrap": "^4.0.0-alpha.4",
+    "bootstrap": "^4.0.0",
     "ckeditor": "^4.6.2",
     "fibers": "^2.0.0",
     "gm": "^1.23.0",
@@ -37,6 +37,7 @@
     "ng2-meta": "^2.0.3",
     "ng2-pagination": "0.5.1",
     "ng2-recaptcha": "^1.7.0",
+    "ngx-bootstrap": "^2.0.2",
     "ngx-clipboard": "^3.0.5",
     "node-pre-gyp": "^0.6.39",
     "reflect-metadata": "0.1.8",
